# solver-project-url-job

./: .aicoe-ci.yaml  .gitignore  .thoth.yaml  CHANGELOG.md  OWNERS  Pipfile  README.md  app.py  pyproject.toml
template/: version.py
